--- a/code/Roiger Intern Project Preliminary Code.Rmd
+++ b/code/Roiger Intern Project Preliminary Code.Rmd
@@ -226,7 +226,7 @@ specrich$Continental <- ifelse(specrich$domainid %in% c('D18', 'D19'), 'Alaska',
 #Preliminary graph of latitude by species richness overall
 ggplot(specrich,aes(lat2, num_species))+
   geom_point(aes(colour = Continental), size = 2)+
-  labs(x = "Latitude", y = "Number of Species")+
+  labs(x = "Latitude", y = "Number of Species")
   ggtitle("Species Richness by Latitude")
 
 # #Preliminary graph of latitude vs. maximum temp
@@ -244,13 +244,13 @@ ggplot(specrich,aes(lat2, num_species))+
 #Preliminary graph of species richness by max temp avg
 ggplot(specrich, aes(TwoWeekAvgMT, num_species))+
   geom_point(aes(color = Year), size = 2)+
-  labs(x = "Two Week Average Maximum Temperature in Celsius", y = "Number of Species")+
+  labs(x = "Two Week Average Maximum Temperature in Celsius", y = "Number of Species")
   ggtitle("Species Richness by Two Week Average Maximum Temperature")
 
 #Preliminary graph of species richness by degree day
 ggplot(specrich, aes(DegreeDays, num_species))+
   geom_point(aes(color = Continental))+
-  labs(x = "Number of Days Above 16 Degrees Celsius", y = "Number of Species")+
+  labs(x = "Number of Days Above 16 Degrees Celsius", y = "Number of Species")
   ggtitle("Species Richness by Precipitation")
 
   
@@ -533,6 +533,8 @@ domain.df <- merge(x = uniquetrap[,c("lat2", "lon2", "siteid")], y = domain.df, 
 domain.df <- merge(x = tars.firstsite[,c("siteid","DomainNativeStatus.value")], y = domain.df, by.x = "siteid", by.y = "siteid", all.y = TRUE)
 
 domain.df$tarsPresent <- ifelse(is.na(domain.df$DomainNativeStatus.value), "Not Prsent", "Present" )
+
+domain.df<- domain.df[domain.df$siteid %in% idsmall$siteid,]
 
 domain.df$tarsPresent<- as.factor(domain.df$tarsPresent)
 domain.df$lat2<- as.numeric(domain.df$lat2)
