--- a/code/Roiger Intern Project Preliminary Code.Rmd
+++ b/code/Roiger Intern Project Preliminary Code.Rmd
@@ -226,6 +226,7 @@ specrich$Continental <- ifelse(specrich$domainid %in% c('D18', 'D19'), 'Alaska',
 #Preliminary graph of latitude by species richness overall
 ggplot(specrich,aes(lat2, num_species))+
   geom_point(aes(colour = Continental), size = 2)+
+  guides(fill = FALSE, color = FALSE)+
   labs(x = "Latitude", y = "Number of Species")
   ggtitle("Species Richness by Latitude")
 
@@ -542,9 +543,8 @@ domain.df$lon2<- as.numeric(domain.df$lon2)
 
 
 mapviz<-ggplot()+
-  geom_polygon(data = NEONmap.df, aes(long, lat, group=group, fill= as.factor(nativestat)))+
-  geom_path(data = NEONmap.df, aes(long,lat, group=group), color = 'white')+
-  scale_fill_manual(values = c("gray48", "dodgerblue4")) +
+  geom_polygon(data = NEONmap.df, aes(long, lat, group=group), fill = "white")+
+  geom_path(data = NEONmap.df, aes(long,lat, group=group), color = 'black')+
   geom_point(data = domain.df, aes( lon2, lat2, color = tarsPresent),size = 2)+
   labs( x = "Longitude", y ="Latitude")+
   # ggtitle("Map of Culex tarsalis Observation and Native Status")+
