--- a/code/Roiger Intern Project Preliminary Code.Rmd
+++ b/code/Roiger Intern Project Preliminary Code.Rmd
@@ -56,9 +56,6 @@ latlon.df <- do.call(rbind, latlon)
 ## matching the names of your columns
 names(latlon.df) <- c("uniquePlotIDs", "lat", "lon", "northing", "easting", "utmZone", "elevation", "NLCDclass") 
 
-#Removing datapoint with lat lon listed as 1,1
-latlon.df[latlon.df==1]<-NA
-
 trap$plotID<-as.character(trap$plotID)
 
 #Merging trap df with lat lon data
@@ -544,12 +541,12 @@ domain.df$lon2<- as.numeric(domain.df$lon2)
 
 
 mapviz<-ggplot()+
-  geom_polygon(data = NEONmap.df, aes(long, lat, group=group), fill = "white")+
-  geom_path(data = NEONmap.df, aes(long,lat, group=group), color = 'black')+
+  geom_polygon(data = NEONmap.df, aes(long, lat, group=group, fill = nativestat))+
+  geom_path(data = NEONmap.df, aes(long,lat, group=group), color = 'white')+
   geom_point(data = domain.df, aes( lon2, lat2, color = tarsPresent),size = 2)+
   labs( x = "Longitude", y ="Latitude")+
-  # ggtitle("Map of Culex tarsalis Observation and Native Status")+
-  # theme(plot.title = element_text(size = 16, face = "bold"))+
+  ggtitle("Map of Culex tarsalis Observation and Native Status")+
+  theme(plot.title = element_text(size = 16, face = "bold"))+
   guides(fill = FALSE, color = FALSE)
 
 ```
