--- a/code/Roiger Intern Project Preliminary Code Data Portal Version.Rmd
+++ b/code/Roiger Intern Project Preliminary Code Data Portal Version.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Roiger Intern Project Preliminary Code"
+title: "Roiger Intern Project Preliminary Code Data Portal Version"
 author: "Charlotte Roiger"
 output:
   html_document: default
@@ -26,57 +26,49 @@ library(rgdal) # requires sp, will use proj.4 if installed
 options(stringsAsFactors = FALSE) 
 
 
-trap = read_csv('N:/Science/FSU/Intern Projects/2017_CharlotteRoiger/mos_trapping_in.csv', na = 'NA')
-sort = read_csv('N:/Science/FSU/Intern Projects/2017_CharlotteRoiger/mos_sorting_in.csv', na = "NA")
-id = read_csv('N:/Science/FSU/Intern Projects/2017_CharlotteRoiger/mos_identification_in.csv', na = "NA")
-pathogen = read_csv('N:/Science/FSU/Intern Projects/2017_CharlotteRoiger/mos_pathogenresults_in.csv', na = "NA")
+# Clean starting environment
+rm(list = ls())
+
+# My working directory
+if(file.exists('~/GitHub/mosquito-intern')){
+  repo_location = '~/GitHub/mosquito-intern/code'
+}
+if(!exists('repo_location')){stop('Set the location of the neon_data repository.')}
+
+# Functions to pull NEON data
+source(paste(repo_location, 'get_NEON_data_by_productID.R', sep='/'))
+
+# Pulls all data by DPID
+# Requires: a known DPID, the folder location of the 'get_NEON_data_by_productID.R' script, andthe table names to pull
+# Note: table names are pulled by grepl, so you just need enough of the name to get a unique table name
+
+# Mosquito diversity data "DP1.10043.001"
+
+# contains 6 tables: 'mos_trapping', 'mos_sorting', 'mos_expertTaxonomistIDProcessed', 'mos_expertTaxonomistIDRaw','mos_archivepooling', 'mos_barcoding'
+mos = get_data_product(productID = "DP1.10043.001", 
+                       df = c('mos_trapping', 'mos_sorting', 'mos_expertTaxonomistIDProcessed', 'mos_expertTaxonomistIDRaw','mos_archivepooling', 'mos_barcoding'))
+
+# Rename table outputs 
+trap = mos$mos_trapping
+sort = mos$mos_sorting
+id = mos$mos_expertTaxonomistIDProcessed
+
 taxonomy = read_csv("~/GitHub/mosquito-intern/resources/mosquito_taxonomy.csv", na = "NA")
 precip.df = read_csv('~/GitHub/mosquito-intern/resources/precipitation.csv', na = "NA")
 temp.df = read_csv("~/GitHub/mosquito-intern/resources/temperature_maximum.csv", na = "NA")
 domain.df = read_csv("~/GitHub/mosquito-intern/data/domainid_siteid_match.csv", na = "NA")
 source('~/GitHub/mosquito-intern/code/get_NEON_location.R')
 
-#source('~/mosquito-intern/code/mapping_viz.R')
-# source('~/GitHub/mosquito-intern/code/get_NEON_location.R') # this is Cody's file path
-uniquePlotIDs <- unique(trap$plotID)
-
-## apply get_NEON_location function to vector uniquePlotIDs, returns a list where each element is a single plotID with GPS data
-# 
-# st <- Sys.time() # profiling start time
-
-#Using lapply and the get_NEON_location function to get a list of location information
-latlon <- lapply(uniquePlotIDs, get_NEON_location, output="latlon")
-
-
-# end <- Sys.time(); end - st # profiling end time; calculate function execution duration
-
-## Convert list into data.frame
-latlon.df <- do.call(rbind, latlon)
-
-## matching the names of your columns
-names(latlon.df) <- c("uniquePlotIDs", "lat", "lon", "northing", "easting", "utmZone", "elevation", "NLCDclass") 
-
-trap$plotID<-as.character(trap$plotID)
-
-#Merging trap df with lat lon data
-trap <- merge(x = latlon.df, y = trap, by.x = "uniquePlotIDs", by.y = "plotID") #merge example
-
-#Filling in more lat lon data
-trap$lat2<-ifelse(is.na(trap$lat)==TRUE, trap$pdaDecimalLatitude,trap$lat)
-trap$lon2<-ifelse(is.na(trap$lon)==TRUE, trap$pdaDecimalLongitude,trap$lon)
-
-
 # Merge ID with sort
 cols = colnames(sort)[!colnames(sort)%in%colnames(id)]
 id <- left_join(id, sort[, c('subsampleID', cols)], 
                 by = "subsampleID")
 
-#Creating a dataframe with only the unique plotIDs and lat2 lon2 data for merging
-uniquetrap<-trap[!duplicated(trap[,1]),c("uniquePlotIDs","lat2","lon2", "elevation","NLCDclass")]
-
+#Creating a dataframe with only the unique plotIDs and lat/lon data for merging
+uniquetrap<-trap[!duplicated(trap$plotID),c("plotID", "decimalLatitude","decimalLongitude", "elevation","nlcdClass")]
 
 #Merging id df with lat2 lon2 data
-id <- merge(x = uniquetrap, y = id, by.y = "plotID", by.x = "uniquePlotIDs", all.y = TRUE)
+id <- merge(x = uniquetrap, y = id, by.y = "plotID", by.x = "plotID", all.y = TRUE)
 
 # Get zero traps from trapping
 new_trap<- trap[!trap$sampleID %in% id$sampleID & trap$targetTaxaPresent=="N",]
@@ -88,11 +80,16 @@ new_trap[, colnames(id)[!colnames(id)%in%colnames(new_trap)]]<-NA
 
 id <- rbind(id,new_trap)
 
+#Convert sample weights and individual count to numeric type
+id$bycatchWeight<- as.numeric(id$bycatchWeight)
+id$totalWeight <- as.numeric(id$totalWeight)
+id$subsampleWeight <- as.numeric(id$subsampleWeight)
+id$individualCount <- as.numeric(id$individualCount)
+
 #Creation of sample Multiplier
 id$sampleMultiplier <- ifelse(is.na(id$bycatchWeight), id$totalWeight/id$subsampleWeight, id$totalWeight/(id$subsampleWeight-id$bycatchWeight))
 id$sampleMultiplier <- ifelse(id$sampleMultiplier==Inf, NA, id$sampleMultiplier)
 id$sampleMultiplier <- ifelse(id$subsampleWeight==0 & id$individualCount != 0, 1, id$sampleMultiplier)
-
 
 #Creation of New individual Count with Multiplier
 id$newindividualCount <-ifelse(is.na(id$sampleMultiplier)==F, round(id$individualCount*id$sampleMultiplier), NA)
@@ -120,15 +117,10 @@ id$Year<-ifelse(is.na(id$collectDate), substr(id$receivedDate,1,4), substr(id$co
 id$Year<-as.factor(id$Year)
 
 #Exctracting date information for id
-id$identifiedDate<- as.character(id$identifiedDate)
-
 id$Date<-substr(id$collectDate,1,10)
 
 #Change temp date type
 temp.df$date <- as.Date(temp.df$date)
-
-#Broad Site ID variable 
-id$siteID<-substr(id$subsampleID, 1,4)
 
 # #merging id with temp data
 # id <- merge(x = temp.df, y = id, by.y = c('siteID','Date'), by.x = c('siteID','date'), all.y = TRUE)
@@ -148,14 +140,10 @@ id$siteID<-substr(id$subsampleID, 1,4)
 # names(id)[3]<-"Precipmm"
 
 #Merge with domain info.
-id <- merge(x = domain.df, y = id, by.y = "siteID", by.x = "siteid", all.y = TRUE)
-id$domainid <- as.character(id$domainid)
-
-#Merge with taxonomy df for taxson rank
-id <- merge( x = taxonomy[,c("scientificName", "taxonRank")], y = id, by.x = "scientificName", by.y = "scientificName")
+id$domainID <- as.character(id$domainID)
 
 #Filter by species and subspecies classification
-id <- dplyr::filter(id, id$taxonRank %in% c("subspecies","species"))
+id <- dplyr::filter(id, id$taxonRank %in% c("subspecies","species", NA, ""))
 
 #smalle subset only containing 2014 and 2016
 idsmall<-dplyr::filter(id, id$Year %in% c(2014,2016))
@@ -168,7 +156,7 @@ idsmall<-dplyr::filter(id, id$Year %in% c(2014,2016))
 ```{r}
 #Creation of a dataframe that maps plotIds to number of unique scientific names
 
-specrich <- ddply(idsmall, ~ siteid + domainid + Date, summarize, num_species = length(unique(scientificName)))
+specrich <- ddply(idsmall, ~ siteID + domainID + Date, summarize, num_species = length(unique(scientificName)))
 
 
 #Omit all instances where date is unknown
@@ -176,25 +164,23 @@ specrich <- specrich[complete.cases(specrich$Date),]
 
 #Merging to get lat2 lon2 data
 
-#First extract site id for the uniquetrap data frame
-uniquetrap$siteid <- substr(uniquetrap$uniquePlotIDs,1,4)
-
 #Omit any instances where lat and lon is not known for a site
-uniquetrap <- uniquetrap[uniquetrap$lat2!="",]
+uniquetrap <- uniquetrap[uniquetrap$decimalLatitude!="",]
+
+#uniquetrap siteID
+uniquetrap$siteID <- substr(uniquetrap$plotID,1,4)
 
 #taking only the observations that are not duplicated
-uniquetrap <- uniquetrap[!duplicated(uniquetrap$siteid),]
-
+uniquetrap <- uniquetrap[!duplicated(uniquetrap$siteID),]
 
 #merge with lat lon data excluding plotID
-specrich <- merge(x = uniquetrap[,c("lat2", "lon2", "elevation", "NLCDclass", "siteid")], y = specrich, by.y = "siteid", by.x = "siteid")
+specrich <- merge(x = uniquetrap[,c("siteID", "decimalLatitude", "decimalLongitude", "elevation", "nlcdClass")], y = specrich, by.y = "siteID", by.x = "siteID")
 
 #Changin lat2 to a numeric and date to date class
-specrich$lat2<-as.numeric(specrich$lat2)
+specrich$decimalLatitude<-as.numeric(specrich$decimalLatitude)
 specrich$date<-as.Date(specrich$Date)
 
 #Creating a Year variable
-
 specrich$Year <- substr(specrich$Date, 1,4)
 
 #Two week average max temp
@@ -212,20 +198,20 @@ Templag <- function(siteID, date){
   return(list(TwoWeekAvgT=TwoWeekAvgT, GDD=GDD))
 }
 
-SPTWAMT.mat<-mapply(Templag, specrich$siteid, specrich$date)
+SPTWAMT.mat<-mapply(Templag, specrich$siteID, specrich$date)
 # saveRDS(SPTWAMT.mat, file = 'SpeciesRichTempLag.rds')
 
 specrich$TwoWeekAvgMT<- c(unlist(SPTWAMT.mat[1,]))
 specrich$DegreeDays <- c(unlist(SPTWAMT.mat[2,]))
 
 #Creating a Continental indicator variable
-specrich$Continental <- ifelse(specrich$domainid %in% c('D18', 'D19'), 'Alaska', ifelse(specrich$domainid == 'D04', 'Puerto Rico', 'Continental U.S'))
+specrich$Continental <- ifelse(specrich$domainID %in% c('D18', 'D19'), 'Alaska', ifelse(specrich$domainID == 'D04', 'Puerto Rico', 'Continental U.S'))
 
 #Preliminary graph of latitude by species richness overall
-ggplot(specrich,aes(lat2, num_species))+
+ggplot(specrich,aes(decimalLatitude, num_species))+
   geom_point(aes(colour = Continental), size = 2)+
   labs(x = "Latitude", y = "Number of Species")+
-  guides(fill = FALSE, color = FALSE)
+  guides(fill = FALSE, color = FALSE)+
   ggtitle("Species Richness by Latitude")
 
 # #Preliminary graph of latitude vs. maximum temp
@@ -244,13 +230,12 @@ ggplot(specrich,aes(lat2, num_species))+
 ggplot(specrich, aes(TwoWeekAvgMT, num_species))+
   geom_point(aes(color = Year), size = 2)+
   labs(x = "Two Week Average Maximum Temperature in Celsius", y = "Number of Species")+
-  guides(fill = FALSE, color = FALSE)
   ggtitle("Species Richness by Two Week Average Maximum Temperature")
 
 #Preliminary graph of species richness by degree day
 ggplot(specrich, aes(DegreeDays, num_species))+
   geom_point(aes(color = Continental))+
-  labs(x = "Number of Days Above 16 Degrees Celsius", y = "Number of Species")
+  labs(x = "Number of Days Above 16 Degrees Celsius", y = "Number of Species")+
   ggtitle("Species Richness by Precipitation")
 
   
@@ -382,16 +367,16 @@ tars<- id[grepl("Culex tarsalis", id$scientificName),]
 tarssmall <- tars[tars$Year %in% c(2014,2016), ]
 
 #Site Level variable
-tarsSiteLevel <- ddply(tarssmall,~siteid + domainid + Date, summarize, siteAbundance = sum(newindividualCount))
+tarsSiteLevel <- ddply(tarssmall,~siteID + domainID + Date, summarize, siteAbundance = sum(newindividualCount))
 
 #merge with location information
-tarsSiteLevel <- merge(x = uniquetrap[,c("lat2", "lon2", "elevation", "NLCDclass", "siteid")], y = tarsSiteLevel, by.y = "siteid", by.x = "siteid")
+tarsSiteLevel <- merge(x = uniquetrap[,c("siteID" ,"decimalLatitude", "decimalLongitude", "elevation", "nlcdClass")], y = tarsSiteLevel, by.y = "siteID", by.x = "siteID")
 
-tarsSiteLevel$lat2<- as.numeric(tarsSiteLevel$lat2)
-tarsSiteLevel$lon2<- as.numeric(tarsSiteLevel$lon2)
+tarsSiteLevel$decimalLatitude<- as.numeric(tarsSiteLevel$decimalLatitude)
+tarsSiteLevel$decimalLongitude<- as.numeric(tarsSiteLevel$decimalLongitude)
 
 #Obtain Temperature information
-CTTWAMT.mat<- mapply(Templag, tarsSiteLevel$siteid, tarsSiteLevel$Date)
+CTTWAMT.mat<- mapply(Templag, tarsSiteLevel$siteID, tarsSiteLevel$Date)
 
 #Create variables in tarsSiteLevel for two week temp lag and degree days
 tarsSiteLevel$TwoWeekAvgMT <-c(unlist(CTTWAMT.mat[1,]))
@@ -410,17 +395,13 @@ tarstax<-tarstax[c(5:15,17:23),]
 tarstax.df <-data.frame("domainID"= unique(domain.df$domainid), "DomainNativeStatus"= tarstax)
 
 #Merge Cu. tarsalis taxonomy df with tars df
-tarsSiteLevel <- merge(x = tarstax.df[,c("domainID", "DomainNativeStatus.value")], y = tarsSiteLevel, by.x = "domainID", by.y = "domainid")
+tarsSiteLevel <- merge(x = tarstax.df[,c("domainID", "DomainNativeStatus.value")], y = tarsSiteLevel, by.x = "domainID", by.y = "domainID")
 
 #Creation of subsets by Year
 
 tars2014 <- tarsSiteLevel[tarsSiteLevel$Year == 2014, ]
 tars2016 <- tarsSiteLevel[tarsSiteLevel$Year == 2016, ]
 
-tars2 <- tars[tars$Year %in% c(2014,2016),]
-
-sum(tars2$newindividualCount)
-sum(tarsSiteLevel$siteAbundance)
 
 #number of sites of appearance
 # length(unique(tars$uniquePlotIDs)) #160
@@ -494,7 +475,7 @@ grid.arrange(tempplot2016, plot2016)
 tarsSiteLevel <- tarsSiteLevel[order(as.Date(tarsSiteLevel$Date)),]
 
 tars.firstdomain <- tarsSiteLevel[match(unique(tarsSiteLevel$domainID), tarsSiteLevel$domainID),]
-tars.firstsite <- tarsSiteLevel[match(unique(tarsSiteLevel$siteid), tarsSiteLevel$siteid),]
+tars.firstsite <- tarsSiteLevel[match(unique(tarsSiteLevel$siteID), tarsSiteLevel$siteID),]
 
 require("rgdal") # requires sp, will use proj.4 if installed
 require("maptools")
@@ -534,23 +515,23 @@ NEONmap.df = join(NEONmap.points, NEONmap@data, by="id")
 NEONmap.df$DomainID<-as.character(NEONmap.df$DomainID)
 NEONmap.df$nativestat<-ifelse(NEONmap.df$DomainID %in% c(1,2,3,5:17), "Native", "Absent")
 
-domain.df <- merge(x = uniquetrap[,c("lat2", "lon2", "siteid")], y = domain.df, by.x = "siteid", by.y = "siteid")
+domain.df <- merge(x = uniquetrap[,c("decimalLatitude", "decimalLongitude", "siteID")], y = domain.df, by.x = "siteID", by.y = "siteid")
 
-domain.df <- merge(x = tars.firstsite[,c("siteid","DomainNativeStatus.value")], y = domain.df, by.x = "siteid", by.y = "siteid", all.y = TRUE)
+domain.df <- merge(x = tars.firstsite[,c("siteID","DomainNativeStatus.value")], y = domain.df, by.x = "siteID", by.y = "siteid", all.y = TRUE)
 
 domain.df$tarsPresent <- ifelse(is.na(domain.df$DomainNativeStatus.value), "Not Prsent", "Present" )
 
-domain.df<- domain.df[domain.df$siteid %in% idsmall$siteid,]
+domain.df<- domain.df[domain.df$siteID %in% idsmall$siteID,]
 
 domain.df$tarsPresent<- as.factor(domain.df$tarsPresent)
-domain.df$lat2<- as.numeric(domain.df$lat2)
-domain.df$lon2<- as.numeric(domain.df$lon2)
+domain.df$lat2<- as.numeric(domain.df$decimalLatitude)
+domain.df$lon2<- as.numeric(domain.df$decimalLongitude)
 
 mapviz<-ggplot()+
   geom_polygon(data = NEONmap.df, aes(long, lat, group=group, fill= as.factor(nativestat)))+
   geom_path(data = NEONmap.df, aes(long,lat, group=group), color = 'black')+
   scale_fill_manual(values = c("lightyellow2", "gold")) +
-  geom_point(data = domain.df, aes( lon2, lat2, color = tarsPresent),size = 2)+
+  geom_point(data = domain.df, aes( decimalLongitude, decimalLatitude, color = tarsPresent),size = 2)+
   labs( x = "Longitude", y ="Latitude")+
   ggtitle("Map of Culex tarsalis Observation and Native Status")+
   theme(plot.title = element_text(size = 16, face = "bold"))
